--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,55 @@ body {
     }
 }
 
+#avatarShow {
+    width: 100px;
+    height: 100px;
+    border: 2px solid var(--bs-gray-400);
+    color: var(--bs-gray-600);
+    background: var(--bs-gray-100);
+    position: relative;
+    overflow: hidden;   /* 此条规则总感觉图片的边缘和边框之间有间隙 */
+}
+#avatarShow:hover {
+    border-color: var(--bs-blue);
+}
+
+#avatarShow>img:not(img[class]) {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+
+}
+
+#avatarShow>span {
+    position: absolute;
+    /* 当只定义position：absolute时，top,bottom，left,right都不指定，则left，top值与原文档流位置一致。即跟当它static时的位置一样，但是不占位。 */
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(0, 0, 0, .5);
+    opacity: 0;
+    transition: opacity 0.4s ease-in-out;
+}
+
+#avatarShow>span::after {
+    content: url(../img/trash3.svg);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#avatarShow>span:hover {
+    opacity: 1;
+}
+
+.avatar-tip {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    /* color: var(--bs-gray-600); */
+}
